--- a/config/database.yml
+++ b/config/database.yml
@@ -10,25 +10,40 @@
 #   http://dev.mysql.com/doc/refman/5.7/en/old-client.html
 #
 default: &default
-  adapter: postgresql
+  username: <%= ENV['USERNAME'] %>
+  password: <%= ENV['PASSWORD'] %>
+#  socket: /var/run/mysqld/mysqld.sock
+
+development:
+  <<: *default
+  # adapter: sqlite3
+  # database: db/development.sqlite3
+  # pool: 5
+  # database: were_wolf_development
+  adapter: mysql2
   encoding: utf8
   pool: 5
   username: root
   password:
   socket: /var/run/mysqld/mysqld.sock
-
-development:
-  <<: *default
   database: c9
   username: <%=ENV['C9_USER']%>
   host: <%=ENV['IP']%>
-  #database: were_wolf_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  # adapter: sqlite3
+  # database: db/development.sqlite3
+  # pool: 5
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  username: root
+  password:
+  socket: /var/run/mysqld/mysqld.sock
   database: were_wolf_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
@@ -52,6 +67,9 @@ test:
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: were_wolf_production
   username: were_wolf
   password: <%= ENV['WERE_WOLF_DATABASE_PASSWORD'] %>
